feat: availabe icon

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     });
 
                     container.appendChild(h3);
-                    container.appendChild(available);
+                    item.properties.FALSE === "TRUE" && container.appendChild(available);
                     container.appendChild(toggleDiv);
                     container.appendChild(additionalInfo);
 
